; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/sbus/char/extr_openprom.c_openprom_compat_ioctl.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/sbus/char/extr_openprom.c_openprom_compat_ioctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }

@ENOTTY = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.file*, i32, i64)* @openprom_compat_ioctl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @openprom_compat_ioctl(%struct.file* %0, i32 %1, i64 %2) #0 {
  %4 = alloca %struct.file*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store %struct.file* %0, %struct.file** %4, align 8
  store i32 %1, i32* %5, align 4
  store i64 %2, i64* %6, align 8
  %8 = load i64, i64* @ENOTTY, align 8
  %9 = sub nsw i64 0, %8
  store i64 %9, i64* %7, align 8
  %10 = load i32, i32* %5, align 4
  switch i32 %10, label %22 [
    i32 138, label %11
    i32 130, label %11
    i32 135, label %11
    i32 129, label %11
    i32 136, label %11
    i32 142, label %11
    i32 137, label %11
    i32 134, label %11
    i32 128, label %11
    i32 140, label %11
    i32 139, label %11
    i32 141, label %11
    i32 131, label %11
    i32 132, label %11
    i32 133, label %11
  ]

11:                                               ; preds = %3, %3, %3, %3, %3, %3, %3, %3, %3, %3, %3, %3, %3, %3, %3
  %12 = load %struct.file*, %struct.file** %4, align 8
  %13 = getelementptr inbounds %struct.file, %struct.file* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.file*, %struct.file** %4, align 8
  %19 = load i32, i32* %5, align 4
  %20 = load i64, i64* %6, align 8
  %21 = call i64 @openprom_ioctl(i32 %17, %struct.file* %18, i32 %19, i64 %20)
  store i64 %21, i64* %7, align 8
  br label %22

22:                                               ; preds = %3, %11
  %23 = load i64, i64* %7, align 8
  ret i64 %23
}

declare dso_local i64 @openprom_ioctl(i32, %struct.file*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
